--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>rafsan</h1>
     <h3>new code change</h3>
+    <p>this is my new paragraph</p>
 </body>
 </html>
