--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>rafsan</h1>
+    <h1>rafsan.com</h1>
     <h3>new code change</h3>
     <p>this is my new paragraph rafsan jany</p>
+    <img src="nur.jpg" alt="">
+    <img src="Pic.jpg" alt="">
 </body>
 </html>
