--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <h3>new code change</h3>
     <p>this is my new paragraph rafsan jany</p>
     <img src="nur.jpg" alt="">
-    <img src="Pic.jpg" alt="">
+    <img src="pic.jpg" alt="">
 </body>
 </html>
